[package]
name = "flic-async-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.3.0", features = ["full", "tracing"] }
tokio-util = { version = "0.4.0", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
regex = "1.4.1"
num_enum = "0.5.1"
async-stream = "0.3.0"
structopt = "0.3.20"
hueclient = "0.3.10"
anyhow = "1.0.33"
rand = "0.7.3"
serde = "1.0.117"
reqwest = "0.10.8"
serde_json = "1.0.59"


